--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
 
     <target name="compile">
         <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" />
+        <javac srcdir="${src.dir}" debug="true" destdir="${classes.dir}" classpathref="classpath" />
     </target>
 
     <target name="jar" depends="compile">
