--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,7 @@
 
     <path id="classpath">
         <fileset dir="${lib.dir}" includes="**/*.jar"/>
+        <fileset dir="${jar.dir}" includes="**/*.jar"/>
     </path>
 
     <target name="clean">
@@ -23,18 +24,14 @@
         <mkdir dir="${jar.dir}"/>
         <jar destfile="build/jar/JPlay.jar" basedir="${classes.dir}">
             <manifest>
-                <attribute name="Main-Class" value="JPlay"/>
+                <attribute name="Main-Class" value="com.nikolajbaer.engine.JPlay"/>
             </manifest>
         </jar>
     </target>
 
     <target name="run" depends="jar">
         <java classname="${main-class}" fork="true">
-            <classpath>
-                <path refid="classpath"/>
-                <path location="${jar.dir}/JPlay.jar"/>
-                <path location="${lib.dir}/jbox2d-2.0.1-full.jar"/>
-            </classpath>
+            <classpath path="${classpath}" />
         </java>
     </target>
 
