--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,7 @@
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir"     value="${build.dir}/jar"/>
     <property name="lib.dir"     value="lib"/>
-    <property name="main-class" value="com.nikolajbaer.engine.JPlay" />
+    <property name="main-class" value="com.nikolajbaer.awtrender.JPlay" />
 
     <path id="classpath">
         <fileset dir="${lib.dir}" includes="**/*.jar"/>
